gccida/g2/init_save_areas
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_save_areas/src/caller-save.c:732:27: error: use of undeclared identifier 'unk_95AE90'
while ( v0 != ( _QWORD *)&unk_95AE90 ); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_save_areas/src/obj/caller-save.o] Error 1
